@@ -1,13 +1,14 @@
 
 # The R Commander and command logger
 
-# last modified 2012-03-16 by J. Fox
+# last modified 2012-03-31 by J. Fox
 #  applied patch to improve window behaviour supplied by Milan Bouchet-Valat 2011-09-22
 #   slight changes 12 Aug 04 by Ph. Grosjean
 #   changes 21 June 2007 by Erich Neuwirth for Excel support (marked EN)
 #   modified 17 December 2008 by Richard Heiberger  ##rmh
 
 Commander <- function(){
+	RStudioP <- function() exists("RStudio.version", where=1)
 	DESCRIPTION <- readLines(file.path(.find.package("Rcmdr"), "DESCRIPTION")[1])
 	RcmdrVersion <- trim.blanks(sub("^Version:", "",
 					grep("^Version:", DESCRIPTION, value=TRUE)))
@@ -153,7 +154,8 @@ Commander <- function(){
 	}
 	else setOption("default.contrasts", c("contr.treatment", "contr.poly"))
 	setOption("log.commands", TRUE)
-	setOption("console.output", FALSE)
+	setOption("RStudio", RStudioP())
+	setOption("console.output", getRcmdr("RStudio"))
 	setOption("retain.selections", TRUE)
 	putRcmdr("dialog.values", list())
 	putRcmdr("dialog.values.noreset", list())
@@ -713,6 +715,7 @@ justDoIt <- function(command) {
 		return(result)
 	}
 	checkWarnings(readLines(messages.connection))
+	if (getRcmdr("RStudio")) Sys.sleep(0)
 	result
 }
 
@@ -786,6 +789,7 @@ doItAndPrint <- function(command, log=TRUE) {
 		# errors already intercepted, display any warnings
 		checkWarnings(readLines(messages.connection))
 	}
+	if (getRcmdr("RStudio")) Sys.sleep(0)
 	result
 }
 
